setup eslint & prettier

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,24 +2,26 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:prettier/recommended",
+    "prettier/@typescript-eslint"
   ],
   "plugins": ["@typescript-eslint"],
   "env": {
     "browser": true,
-    "es2020": true
-  },
-  "rules": {
-    "@typescript-eslint/semi": ["error"],
-    "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/no-unused-vars": [
-        "error", { "argsIgnorePattern": "^_" }
-    ],
-     "@typescript-eslint/no-explicit-any": 1,
-    "no-case-declarations": 0
+    "es2020": true,
+    "node": true
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-unused-vars": [
+        "error", { "argsIgnorePattern": "^_" }
+    ],
+    "@typescript-eslint/no-explicit-any": 1,
+    "no-case-declarations": 0
   }
 }
