--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tsc": "tsc",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "schema": "graphql-codegen"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@graphql-codegen/typescript-resolvers": "^1.17.9",
     "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "eslint": "^7.8.1",
@@ -28,9 +30,11 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "apollo-server-express": "^2.17.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.3.0",
-    "graphql-tools": "^6.2.1"
+    "graphql-tools": "^6.2.1",
+    "mongoose": "^5.10.3"
   }
 }
