--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "@typescript-eslint/restrict-template-expressions": 0,
     "@typescript-eslint/no-floating-promises": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-unused-vars": [
