--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev src/index.ts --require dotenv/config",
     "lint": "eslint --ext .ts .",
     "start": "node build/index.js",
     "schema": "graphql-codegen"
@@ -27,11 +27,11 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "dotenv": "^8.2.0"
   },
   "dependencies": {
     "apollo-server-express": "^2.17.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.1",
