--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,9 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "@typescript-eslint/no-unsafe-member-access": 0,
+    "@typescript-eslint/no-unsafe-call": 0,
+    "@typescript-eslint/explicit-module-boundary-types": 0,
     "@typescript-eslint/restrict-template-expressions": 0,
     "@typescript-eslint/no-floating-promises": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
