--- a/package.json
+++ b/package.json
@@ -1,40 +1,36 @@
 {
   "name": "express-apollo-mongo-ts",
-  "version": "1.0.0",
   "private": true,
-  "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev src/index.ts --require dotenv/config",
+    "dev": "ts-node-dev src/main.ts --require dotenv/config",
     "lint": "eslint --ext .ts .",
     "start": "node build/index.js",
     "schema": "graphql-codegen"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@graphql-codegen/cli": "^1.17.8",
     "@graphql-codegen/typescript": "^1.17.9",
+    "@graphql-codegen/typescript-mongodb": "^1.17.8",
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@graphql-codegen/typescript-resolvers": "^1.17.9",
     "@types/express": "^4.17.8",
-    "@types/mongoose": "^5.7.36",
+    "@types/mongodb": "^3.5.27",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2",
-    "dotenv": "^8.2.0"
+    "typescript": "^4.0.2"
   },
   "dependencies": {
     "apollo-server-express": "^2.17.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.1",
-    "mongoose": "^5.10.3"
+    "mongodb": "^3.6.1"
   }
 }
