--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "outDir": "./build/",
+    "outDir": "./dist/",
     "module": "commonjs",
     "strict": true,
     "noUnusedLocals": true,
