--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "tsc": "tsc",
     "dev": "ts-node-dev src/main.ts --require dotenv/config",
-    "lint": "eslint --ext .ts .",
-    "start": "node build/index.js",
+    "start": "node dist/main.js",
     "schema": "graphql-codegen"
   },
   "devDependencies": {
@@ -16,12 +15,7 @@
     "@graphql-codegen/typescript-resolvers": "^1.17.9",
     "@types/express": "^4.17.8",
     "@types/mongodb": "^3.5.27",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
     "dotenv": "^8.2.0",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
